fix: add scroll to popup when the content doesn't fit on the screen

--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -73,6 +73,7 @@
   border: none;
 
   transition: opacity .2s linear;
+  will-change: background-image;
 }
 
 .post-card__button:hover {
