--- a/src/components/Shared/Popup/Popup.css
+++ b/src/components/Shared/Popup/Popup.css
@@ -1,22 +1,22 @@
 .popup {
   width: 100%;
   height: 100vh;
+  /*overflow: scroll;*/
 
   display: flex;
-  visibility: hidden;
-
-  opacity: 0;
-  position: fixed;
   flex-direction: column;
   justify-content: center;
-
   align-items: center;
+
+  visibility: hidden;
+  opacity: 0;
+
+  position: fixed;
+  z-index: 1;
 
   top: 0;
   left: 0;
   margin: 0 auto;
-
-  z-index: 1;
 
   transition: all .2s linear;
 }
@@ -47,10 +47,17 @@
 .popup__container {
   width: calc(100% - (20px * 2));
   max-width: 445px;
+  /*overflow: scroll;*/
 
   background-color: #f0f1ec;
 
   padding: 20px 40px 20px;
+}
+
+.popup__scroll-container {
+  width: 100%;
+  height: 70vh;
+  overflow: scroll;
 }
 
 .popup__header {
