--- a/src/components/Shared/TextAreaInput/TextAreaInput.css
+++ b/src/components/Shared/TextAreaInput/TextAreaInput.css
@@ -1,8 +1,8 @@
 .text-area-input {
   box-sizing: border-box;
   width: 100%;
-  min-height: 50px;
-  max-height: 120px;
+  min-height: 150px;
+  max-height: 300px;
   resize: vertical;
 
   background-color: transparent;
